--- a/index.css
+++ b/index.css
@@ -9,22 +9,14 @@ img{
     background-image: url("sunset.jpg");
     background-repeat: no-repeat;
     width: 100%;
-    height: auto;
+    height: 100%;
    
 }
 h1{
+    font-family: 'Kanit', sans-serif;
     color: gold;
     text-align: center;
     background-color:black;
-}
-.subdiv{
-    padding: 10px;
-    border-radius: 10px;
-    /* background-color:salmon; */
-    width: 500px;
-    position: absolute;
-    top: 290px;
-    left: 430px;
 }
 .button{
     display: flex;
@@ -67,16 +59,80 @@ h1{
     padding: 10px 20px 10px 20px;
 }
 
-.div1{
-    height: 50px;
-    width: 200px;
-    background-color: black;
-    color: goldenrod;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-    border-style: double;
-    margin-left: 140px;
-    margin-bottom: 15px;
+
+/* media */
+@media only screen and (max-width:600px){
+    img{
+        height: 36rem;
+    }
+    .subdiv{
+        padding: 10px;
+        border-radius: 10px;
+        position: absolute;
+        top: 290px;
+        left: 5rem;
+    }
+    .div1{
+        height: 50px;
+        width: 200px;
+        background-color: black;
+        color: goldenrod;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+        border-style: double;
+        margin-left: 3.5rem;
+        margin-bottom: 15px;
+    }
+}
+@media only screen and (min-width: 768px){
+    img{
+        height: 37rem;
+    }
+    .subdiv{
+        padding: 10px;
+        border-radius: 10px;
+        position: absolute;
+        top: 15rem;
+        left: 13.5rem;
+    }
+    .div1{
+        height: 50px;
+        width: 200px;
+        background-color: black;
+        color: goldenrod;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+        border-style: double;
+        margin-left: 3.5rem;
+        margin-bottom: 15px;
+    }   
+}
+@media only screen and (min-width: 992px){
+    img{
+        height: 37.82rem;
+    }
+    .subdiv{
+        padding: 10px;
+        border-radius: 10px;
+        position: absolute;
+        top: 15rem;
+        left: 32rem;
+    }
+    .div1{
+        height: 50px;
+        width: 200px;
+        background-color: black;
+        color: goldenrod;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+        border-style: double;
+        margin-left: 3.5rem;
+        margin-bottom: 15px;
+    }   
 }
